# butadon-backend

./: .gitignore  README.md  example.env  pyproject.toml
app/: main.py
app/api/: routers.py
app/api/datasets/: datasets_crud.py  datasets_dto.py  datasets_model.py  datasets_router.py
app/api/rags/: rags_crud.py  rags_dto.py  rags_model.py  rags_router.py
app/api/users/: users_crud.py  users_dto.py  users_model.py  users_router.py
app/core/: auth.py  config.py  password.py
app/db/: deps.py
app/db/chroma/: client.py
app/db/sqlite/: database.py  init_db.py
app/services/: llm.py
app/services/rags/: build_db.py  rag.py
