[project]
name = "butadon-backend-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.0.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "fastapi-cli>=0.0.8",
    "cuid>=0.4.0",
    "openai>=1.97.0",
]
